--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html lang="en"><head>
         <meta charset="UTF-8">
         <title>Run Buddy</title>
+        <style>
+            body{
+                background-color: tomato;
+            }h1{
+                font-size: 100px;
+            }
+        </style>
     </head>
 <!-- navigation -->
 <header>
